--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.12.0"
   },
   "devDependencies": {
