--- a/PetMate/package.json
+++ b/PetMate/package.json
@@ -18,6 +18,7 @@
     "react-input-mask-next": "^3.0.0-alpha.12",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.10.0",
+    "react-spinners": "^0.15.0",
     "router-context": "file:"
   },
   "devDependencies": {
