--- a/PetMate/package.json
+++ b/PetMate/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "bcryptjs": "^3.0.2",
+    "bootstrap": "^5.3.3",
     "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
