--- a/PetMate/package.json
+++ b/PetMate/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
     "lottie-react": "^2.4.1",
