--- a/PetMate/package.json
+++ b/PetMate/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "bootstrap": "^5.3.3",
     "cpf-cnpj-validator": "^1.0.3",
+    "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
