--- a/back/package.json
+++ b/back/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
@@ -25,6 +24,9 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
-  }
+    "jest": "^30.0.0",
+    "nodemon": "^3.1.4",
+    "supertest": "^7.1.1"
+  },
+  "description": ""
 }
